# DDJunoDetectors

./: CMakeLists.txt  README.md  a.csv  b.csv
compact/: CentralDetector.xml  CentralDetector_PMT.xml  Juno.xml  Juno_Constants.xml  Juno_elements.xml  Juno_materials.xml  SiD.xml  TopTrigger.xml  TotSphere.xml  WaterPool.xml  a.xml  watePool.xml
compact/SiD/: SiD_Beamcal.xml  SiD_Ecal.xml  SiD_Solenoid.xml  SiD_Tracker.xml  SiD_TrackerBarrel.xml
compact/bak/: AcrylicfVessel.xml  LiquidScintillator.xml  SiDConstants.xml  SiD_Ecal.xml  SiD_EcalEndcap.xml
dd4hep2FBX/: CMakeLists.txt  CentralDetector.xml  Juno.xml  Juno_materials.xml  TopTrigger.xml  build.sh  dd4hep2FBXWriter.cc  dd4hep2FBXWriter.h  main.cc  test.cc  wp_pmt_out.xml
dd4hep2FBX/include/: G4Polyhedron.hh  HepPolyhedron.h  dd4hep2FBXWriter.h
dd4hep2FBX/lcdd/: output.xml  wp.gdml
dd4hep2FBX/src/: G4Polyhedron.cc  HepPolyhedron.cc  dd4hep2FBXWriter.cc  test.fbx
include/: PMT.h  PMTParam.h  test.h
src/: CentralDetector_geo.cpp  DiskTracker_geo.cpp  ForwardDetector_geo.cpp  PMT.cpp  PMTConstructor.cpp  PMTParam.cpp  PolyhedraEndcapCalorimeter2_geo.cpp  TopTrigger_geo.cpp  TotSphere_geo.cpp  WaterPool_geo.cpp  test.cpp
